# zivid-ros

zivid_description/: CMakeLists.txt  package.xml
zivid_description/launch/: view_zivid_two_camera.launch
zivid_description/meshes/collision/: zivid-two-plus.stl
zivid_description/urdf/: zivid_two_camera.urdf.xacro
zivid_description/urdf/macros/: zivid_two_camera.xacro
zivid_samples/scripts/: sample_capture2.py
