<?xml version="1.0"?>
<package format="2">
  <name>zivid_description</name>
  <version>0.1.0</version>
  <description>Description of visual and collision geometry of Zivid One+ and Zivid Two 3D Camera</description>
  
  <maintainer email="support@zivid.com">Zivid</maintainer>
  <author email="d.kroezen@tudelft.nl">Dave Kroezen - SAM XL</author>
  <author email="hashim.ismail@cs.lth.se">Hashim Ismail</author>

  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>